# tauri-plugin-steam-overlay

./: Cargo.toml  README.md
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
permissions/autogenerated/: reference.md
src/: lib.rs
