[package]
name = "tauri-plugin-steam-overlay"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-steam-overlay"

[dependencies]
tauri = { version = "2.11.1", features = ["unstable"] }
serde = "1.0"
thiserror = "2"
wgpu = "0.20"
winit = "0.30"

[build-dependencies]
tauri-plugin = { version = "2.6.1", features = ["build"] }
