[package]
name = "tauri-plugin-steam-overlay"
version = "0.1.0"
authors = [ "qwook" ]
description = "Creates a surface for steam overlay to display on."
edition = "2021"
license = "Apache-2.0 OR MIT"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js"]
repository = "https://github.com/qwook/tauri-plugin-steam-overlay"


[dependencies]
tauri = { version = "2.11.1", features = ["unstable"] }
serde = "1.0"
thiserror = "2"
wgpu = "0.20"
winit = "0.30"
